# MYUNI

backend/: datas.toml  gemini_app.code-workspace  main.py  pyproject.toml  requirements.txt  server.js
backend/.choreo/: component.yaml
backend/core/: little_db.py  model.py
backend/core/add_rag/: rag.py
backend/routers/: oauth.py  story.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  ChatScreen.css  ChatScreen.jsx  LoginScreen.css  LoginScreen.jsx  api.js  auth.js  index.css  util.js
